@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<div id="warbler-hero"
-     class="full-width">
-</div>
+<!-- TODO: Is this right? Can't get image to be perfect -->
+<!-- <div id="warbler-hero"
+     class="full-width card">
+     <img
+        src="{{ user.header_image_url }}"
+        alt="Header image for {{ user.username }}"
+        class="card-img-top">
+</div> -->
+<img
+  id="warbler-hero"
+  class="full-width"
+  src="{{ user.header_image_url }}"
+  alt="Header image for {{ user.username }}">
 <img src="{{ user.image_url }}"
      alt="Image for {{ user.username }}"
      id="profile-avatar">
@@ -51,7 +60,7 @@
             <a href="/users/profile" class="btn btn-outline-secondary">
               Edit Profile
             </a>
-            <form method="GET" action="/users/delete">
+            <form method="POST" action="/users/delete">
               {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-danger ms-2">
                 Delete Profile
@@ -83,10 +92,10 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
+    <p>{{ user.bio }}</p>
     <p class="user-location">
       <span class="bi bi-map"></span>
-      LOCATION HERE
+      {{ user.location }}
     </p>
   </div>
 
