@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body_class %}onboarding{% endblock %}
+
 
 {% block content %}
 
